# groundstate

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile  package.json  pnpm-lock.yaml  research.json  research.toml  tsconfig.base.json
.github/workflows/: ci.yml
crates/gs-demo/: Cargo.toml
crates/gs-demo/src/: main.rs
crates/gs-execute/: Cargo.toml
crates/gs-execute/src/: lib.rs  plugins.rs
crates/gs-extract/: Cargo.toml
crates/gs-extract/src/: actions.rs  extraction_tests.rs  generic.rs  lib.rs  table.rs
crates/gs-graph/: Cargo.toml
crates/gs-graph/src/: invalidation_tests.rs  lib.rs  reconciliation_tests.rs  subscription.rs  subscription_tests.rs
crates/gs-napi/: Cargo.toml
crates/gs-napi/src/: lib.rs
crates/gs-observe/: Cargo.toml
crates/gs-observe/src/: lib.rs
crates/gs-reactive/: Cargo.toml
crates/gs-reactive/src/: lib.rs  observation_loop.rs  tests.rs
crates/gs-trace/: Cargo.toml
crates/gs-trace/src/: lib.rs  trace_tests.rs
crates/gs-transport/: Cargo.toml
crates/gs-transport/src/: cdp.rs  error.rs  lib.rs
crates/gs-types/: Cargo.toml
crates/gs-types/src/: action.rs  condition.rs  entity.rs  lib.rs  observation.rs  trace.rs  transport.rs
crates/gs-validate/: Cargo.toml
crates/gs-validate/src/: lib.rs  validation_tests.rs
fixtures/: aria-states.html  async-race.html  auth-timeout.html  column-insert.html  column-reorder.html  concurrent-mutation.html  content-keyed.html  disabled-button.html  docs-home.html  fieldset-disabled.html  id-churn.html  invoices.html  lazy-rows.html  modal-interrupt.html  nested-noise.html  nested-table.html  pagination.html  relabel.html  rerender.html  row-actions.html  row-removal.html  search-results.html  validation-error.html  visibility-filter.html
