[workspace]
resolver = "2"
members = [
    "crates/gs-types",
    "crates/gs-graph",
    "crates/gs-trace",
    "crates/gs-transport",
    "crates/gs-observe",
    "crates/gs-extract",
    "crates/gs-validate",
    "crates/gs-execute",
    "crates/gs-reactive",
    "crates/gs-napi",
    "crates/gs-demo",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/tylergibbs1/groundstate"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
petgraph = "0.7"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
