[package]
name = "gs-reactive"
version.workspace = true
edition.workspace = true

[dependencies]
gs-types = { path = "../gs-types" }
gs-graph = { path = "../gs-graph" }
gs-transport = { path = "../gs-transport" }
gs-observe = { path = "../gs-observe" }
gs-extract = { path = "../gs-extract" }
gs-execute = { path = "../gs-execute" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
