[package]
name = "gs-transport"
version.workspace = true
edition.workspace = true

[dependencies]
gs-types = { path = "../gs-types" }
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
base64 = "0.22"
reqwest.workspace = true
url.workspace = true
